Fix loading-overlay to be hidden by default

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -47,6 +47,7 @@ select option[value=""] {
 }
 
 #loading-overlay {
+    display: none;
 	position: fixed;
     top: 0;
     left: 0;
